aligned bot nav | fixes still needed

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a:active {
 }
 /*end links section*/
 .apps-logo {
-    position: absolute;
+    position: relative;
     top: 5px;
     width: 23px;
     height: 23px;
@@ -81,4 +81,15 @@ a:active {
 }
 .under-text {
     position: absolute;
+}
+footer {
+    position: relative;
+    top: 530px;
+    background-color: gray;
+}
+.bot-nav-left {
+    text-align: left;
+}
+.bot-nav-right {
+    text-align: right;
 }
